@@ -126,7 +126,8 @@ void tv_timerbounds(const char *timername,
         // If current time MINUS margin is AFTER tv, then reset.
         if (tv_timercmp(tv, &nowminus) < 0) {
         	if (debug)
-                	printf("System time has gone too much forwards, Resetting timer '%s'.\n", timername);
+                	printf("System time has gone too much forwards, Resetting timer '%s'. dt=%d margin=%d\n",
+                               timername,  tv->tv_sec - nowminus.tv_sec, margin);
                 resetfunc(resetarg);
         }
 
@@ -135,7 +136,8 @@ void tv_timerbounds(const char *timername,
         // If current time PLUS margin is BEFORE tv, then reset.
         if (tv_timercmp(&nowplus, tv) < 0) {
         	if (debug)
-                	printf("System time has gone too much backwards, Resetting timer '%s'.\n", timername);
+                	printf("System time has gone too much backwards, Resetting timer '%s'. dt=%d margin=%d\n",
+                               timername, nowplus.tv_sec - tv->tv_sec, margin);
                 resetfunc(resetarg);
         }
 }
